[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exedra"
authors = [{name = "Deepyaman Datta", email = "deepyaman.datta@utexas.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["tox ~=3.3"]
kfp = ["kfp ~=2.0b0"]

[project.urls]
Home = "https://github.com/deepyaman/exedra"
