[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exedra"
authors = [{name = "Deepyaman Datta", email = "deepyaman.datta@utexas.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["tox ~=3.3"]
argo = ["argo-workflows ~=6.3.0rc2"]
kfp = ["kfp ~=2.0b0"]

[project.urls]
Home = "https://github.com/deepyaman/exedra"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "exedra.*"
disallow_untyped_defs = true
